--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1397,7 +1397,7 @@ Our platform will center around secure, efficient, and scalable communication pr
   \centering
   \includegraphics[width=1\textwidth]{timeline.png}
   \caption{Project timeline illustrating key development milestones and deadlines.}
-  \label{FigUH}
+  \label{FigUHt}
 \end{figure}
 
 The original file for the timeline can be found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/Design/SoftArchitecture/Timeline.xlsx}{here}.
