--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1396,8 +1396,11 @@ Our platform will center around secure, efficient, and scalable communication pr
 \begin{figure}[H]
   \centering
   \includegraphics[width=1\textwidth]{timeline.png}
-  \label{FigUH}
+  \caption{Project timeline illustrating key development milestones and deadlines.}
+  \label{FigUHt}
 \end{figure}
+
+The original file for the timeline can be found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/Design/SoftArchitecture/Timeline.xlsx}{here}.
 
 \bibliographystyle {plainnat}
 \bibliography{../../../refs/References}
