--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -184,16 +184,16 @@ When not listed as lead, members of core team will support through team discussi
       & & Support review of Design\\
       & & \textbf{Implementation}\\
       & & NFR Tests - Performance, Cultural, Compliance, User Docs \\
-      & & Changes Due to Testing Backend
-      & & Unit Test for Backend
-      & & Code Coverage Backend
+      & & Changes Due to Testing Backend \\
+      & & Unit Test for Backend \\
+      & & Code Coverage Backend \\
       \hline
       Kyle McMaster & Core team & \textbf{SRS} \\
       & & Lead review of design\\
       & & \textbf{Implementation}\\
-      & & NFR Tests - Usability, Look and Feel, Operational and Environmental, Maintainability and Support, Security
-      & & FR Test Validation
-      & & Automated Testing and Changes Due to Testing Backend
+      & & NFR Tests - Usability, Look and Feel, Operational and Environmental, Maintainability and Support, Security \\
+      & & FR Test Validation \\
+      & & Automated Testing and Changes Due to Testing Backend \\
       \hline
       Dr. Swati Mishra & Project Supervisor & Validate all team docs in structured review\\\hline
       Capstone Team 10 & Primary Reviewers & Validate all team docs in \\
