--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1404,4 +1404,6 @@ Our platform will center around secure, efficient, and scalable communication pr
 
 \newpage{}
 
+% Creating PR
+
 \end{document}
